--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         Hi there, I go by <b>Alex</b>. My mum named me after 
         <a href="https://en.wikipedia.org/wiki/Alex_Haley">Alex Haley</a>. 💫<br>
         I excel in <i>backend development</i> 🛠️, and <i>infrastructure engineering</i> 👷🏻. <br><br>
-        Frontend is not my strong suit, hence this UI 😅. <br><br>
+        Frontend is not my strong suite, hence this UI 😅. <br><br>
         This portfolio project specially focuses to flex backend muscles 💪🏼. The UI will be kept as minimal as possible.
         <h3>Technologies used/to be used</h3>
         <ol>
